# kuake-pipe

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUSH.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  selector_breakage.md
.github/workflows/: release.yml  test.yml
docs/: ALIYUN_PAN_RESEARCH.md  AUTODL_API.md  MANUAL_TEST.md  TROUBLESHOOTING.md
docs/specs/: 2026-05-25-kuake-pipe-design.md
docs/superpowers/plans/: 2026-05-25-kuake-pipe-v1.md
scripts/: probe_autodl_api.py  probe_autodl_create_flow.py  probe_autodl_schemas.py  probe_create_intercept.py  probe_quark_upload.py
src/kuake/: __main__.py  autodl_api.py  autodl_planner.py  cli.py  concurrency.py  config.py  debug_log.py  errors.py  i18n.py  pack.py  panel_api.py  platform_guard.py  progress.py  proxy.py  quark_uploader.py  server.py  ssh_exec.py
src/kuake/browser/: __init__.py  autodl_actions.py  autodl_scraper.py  installer.py  panel_scraper.py  quark_cookie.py  quark_scraper.py  selectors.py  session.py  smoke_test.py
src/kuake/commands/: auto.py  clone.py  confirm_create.py  doctor.py  grab.py  init.py  instances.py  ls.py  push.py  refresh.py  reset.py  retry.py  rm.py  start.py  status.py  stop.py  wait_running.py  whoami.py
src/kuake/templates/: index.html
tests/: _e2e_probe.py  _e2e_probe_autobind.py  _e2e_probe_autobind2.py  _e2e_probe_bind.py  _e2e_probe_market.py  test_auto_chain.py  test_autodl_api_jwt.py  test_autodl_planner.py  test_autodl_scraper_parsing.py  test_browser_selectors.py  test_cli.py  test_commands_extra.py  test_commands_misc.py  test_commands_push_retry.py  test_concurrency_lock.py  test_config_atomic.py  test_config_migration.py  test_errors.py  test_init_helpers.py  test_init_prompt.py  test_installer.py  test_pack.py  test_panel_api.py  test_panel_expiry.py  test_platform_guard.py  test_quark_uploader.py  test_round3_json_and_status.py  test_round4_validation_and_prune.py  test_server.py  test_smoke_test.py  test_ssh_exec.py
